Bug 343606 - Connect button remains disabled after disconnecting
Summary: Connect button remains disabled after disconnecting
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Lukáš Tinkl
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-31 00:52 UTC by John Lindgren
Modified: 2024-12-23 18:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John Lindgren 2015-01-31 00:52:54 UTC
After selecting a connected wireless network in the network list and clicking the "Disconnect" button in the toolbar, the "Disconnect" button remains enabled and the "Connect" button remains disabled (greyed out).  The reverse is also true when connecting to a network.

Clicking on the network again in the network list makes the buttons update to their correct state.

Reproducible: Always

Steps to Reproduce:
See details.

Actual Results:  
See details.

Expected Results:  
The button states should update automatically after connecting to or disconnecting from a network.

Arch Linux packages:
plasma-nm 5.2.0-1
networkmanager 1.0.0-1
Comment 1 Jan Grulich 2015-03-02 10:45:42 UTC
Git commit 5a2a5bd0a0d4ee6e0e02dc49d33469eec8ff7fb1 by Jan Grulich.
Committed on 02/03/2015 at 10:45.
Pushed by grulich into branch 'master'.

Re-check enabled/disabled actions for a selected connection when it gets changed

M  +17   -2    editor/connectioneditor.cpp
M  +1    -0    editor/connectioneditor.h

http://commits.kde.org/plasma-nm/5a2a5bd0a0d4ee6e0e02dc49d33469eec8ff7fb1
Comment 2 Jan Grulich 2015-03-02 10:46:18 UTC
Git commit d28875db0dbdffd1f3e03f6e54aa6761da3f7d98 by Jan Grulich.
Committed on 02/03/2015 at 10:45.
Pushed by grulich into branch 'Plasma/5.2'.

Re-check enabled/disabled actions for a selected connection when it gets changed

M  +17   -2    editor/connectioneditor.cpp
M  +1    -0    editor/connectioneditor.h

http://commits.kde.org/plasma-nm/d28875db0dbdffd1f3e03f6e54aa6761da3f7d98
Comment 3 Jan Grulich 2015-03-02 12:14:42 UTC
Git commit da19f81c23041aadcc39814b6b2bc15bbc9b3fc5 by Jan Grulich.
Committed on 02/03/2015 at 11:23.
Pushed by grulich into branch '0.9.3'.

Re-check enabled/disabled actions for a selected connection when it gets changed

M  +16   -2    editor/connectioneditor.cpp
M  +1    -0    editor/connectioneditor.h

http://commits.kde.org/plasma-nm/da19f81c23041aadcc39814b6b2bc15bbc9b3fc5
Comment 4 Jan Grulich 2015-03-10 19:28:52 UTC
*** Bug 345021 has been marked as a duplicate of this bug. ***