Re-check enabled/disabled actions for a selected connection when it gets changed

BUG:343606