editor/connectioneditor.h
@@ -51,6 +51,7 @@ private Q_SLOTS:
     void addConnection(QAction * action);
     void connectionAdded(const QString & connection);
     void connectConnection();
+    void dataChanged(const QModelIndex & topLeft, const QModelIndex & bottomRight);
     void disconnectConnection();
     void editConnection();
     void exportVpn();
